@@ -1,9 +1,10 @@
 package com.ApparelAvenue.backend.service.impl;
 
 import java.io.File;
-import java.io.FileInputStream;
-import java.io.FileOutputStream;
-import java.util.UUID;
+import java.io.IOException;
+import java.nio.file.Files;
+import java.nio.file.Path;
+import java.nio.file.Paths;
 
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.stereotype.Service;
@@ -11,72 +12,52 @@ import org.springframework.web.multipart.MultipartFile;
 
 import com.ApparelAvenue.backend.service.FileService;
 
-import lombok.extern.slf4j.Slf4j;
+import jakarta.annotation.PostConstruct;
 
 @Service
-@Slf4j
 public class FileServiceImpl implements FileService {
 
+    @Value("${upload.file.root}")
+    private String rootDirectory;
+
     @Value("${upload.file.banner}")
-    private String imageDir;
+    private String bannerDirectory;
 
-    @Override
-    public void createImageDir() {
-        createDirectory(imageDir);
+    @PostConstruct
+    public void init() {
+        createBannerImageDir();  
     }
 
     @Override
-    public String uploadImage(MultipartFile file) {
-        createImageDir();
-        return uploadImageFile(file, imageDir);
-    }
-
-    @Override
-    public byte[] getImage(String fileName) {
-        return getImageFile(imageDir, fileName);
-    }
-
-    private void createDirectory(String dir) {
-        File file = new File(dir);
-        if (!file.exists()) {
-            file.mkdirs();
-            log.info("Directory created: {}", dir);
-        } else {
-            log.info("Directory already exists: {}", dir);
+    public void createBannerImageDir() {
+        String fullPath = rootDirectory + File.separator + bannerDirectory;
+        File dir = new File(fullPath);
+        if (!dir.exists()) {
+            dir.mkdirs();
         }
     }
 
-    private String getCustomName(String fileName) {
-        String extension = fileName.substring(fileName.lastIndexOf("."));
-        String customName = UUID.randomUUID().toString();
-        return customName + extension;
-    }
-
-    private String uploadImageFile(MultipartFile file, String dir) {
-        if (!file.isEmpty()) {
-            String originalName = file.getOriginalFilename();
-            String customName = getCustomName(originalName);
-            log.info("Uploading to directory: {}", dir);
-            try (FileOutputStream fos = new FileOutputStream(dir + File.separator + customName)) {
-                fos.write(file.getBytes());
-                log.info("File uploaded: {}", customName);
-                return customName;
-            } catch (Exception e) {
-                log.error("Error uploading image: {}", e.getMessage());
-                throw new RuntimeException("Image upload failed", e);
-            }
+    @Override
+    public String uploadBannerImage(String filePath, MultipartFile file) {
+        try {
+            String fullPath = rootDirectory + File.separator + bannerDirectory + File.separator + file.getOriginalFilename();
+            Path path = Paths.get(fullPath);
+            Files.write(path, file.getBytes());
+            return fullPath;
+        } catch (IOException e) {
+            e.printStackTrace();
+            return null;
         }
-        throw new RuntimeException("No image found to upload");
     }
 
-    private byte[] getImageFile(String dir, String fileName) {
-        String location = dir + File.separator + fileName;
-
-        try (FileInputStream fis = new FileInputStream(location)) {
-            return fis.readAllBytes();
-        } catch (Exception e) {
-            log.error("Error retrieving image: {}", e.getMessage());
-            throw new RuntimeException("Image not found", e);
+    @Override
+    public byte[] getBannerImage(String filePath) {
+        try {
+            Path path = Paths.get(filePath);
+            return Files.readAllBytes(path);
+        } catch (IOException e) {
+            e.printStackTrace();
+            return null;
         }
     }
 }
